--- a/style_sheets/Conclusion.tex
+++ b/style_sheets/Conclusion.tex
@@ -1,8 +1,9 @@
 \chapter{Conclusion}
-Ants have been the center of attraction for research for so many myrmecologists. An enormous amount of research works has been performed to analyze the foraging strategies of ants. Scientists performed many biological experiments to discover what strategies ants follow to forage from the environment. \par
-Although we have talked about the combination of three strategies for foraging it was unclear which of the strategies ants follow for recruiting from large food sources. Several indoor experiments on harvester ants which used high definition cameras and chemical detectors have shown that they lay pheromone trails for other ants to follow. \par
+An enormous amount of research has been performed to analyze the foraging strategies of ants. Scientists performed many biological experiments to discover what strategies ants follow to forage from the environment. \par
+Although we have talked about the combination of three strategies for foraging, it was unclear which of the strategies ants follow for recruiting from large food sources. Several indoor experiments on harvester ants which used high definition cameras and chemical detectors have shown that they lay pheromone trails for other ants to follow. \par
 As the amount of pheromone laid by the ants are very small, it was difficult to identify the existence of chemicals in the outdoor field experiments. So, we used this mathematical approach to detect the pheromone laying events of ants in the outdoor field experiments. \par
-In simulations, we could detect change points in every single experiment. But, we were not being able to detect change points in all the outdoor field experiments. It is because, in simulation, the CPFA is designed to forage, despite considering the condition of the environment. But as we have mentioned in the introduction about the factors which affects the foraging activity of harvester ants, can play a vital role in some of the experiments.\par
-But since we can detect change points in the majority of the field experiments, we infer that ants use pheromone to recruit from large clumped food sources.
-Also in ``memory only'' simulation environment ants used sitefidelity extensively, which resulted in the drastic change in their foraging rate. As a result, we can see picks and hikes in their foraging rate which was detected by our change point detection algorithm. But when we have tuned the simulations to use both memory and communication, we observe ants did not use memory much, even if they use, it didn’t affect their foraging rate, so a change point can be detected.\par
-We have only used binary segmented cumulative sum methods for detecting the change points. In future, we can try to observe and find the pattern of changes in the foraging rate when the pheromone is laid, and use the statistical data from the simulation to infer the pheromone laying events in the field experiment data.
+In simulations, we could detect change points in every single experiment.
+Since we can detect change points in the majority of the field experiments, we infer that all three species of ants either use pheromone to recruit from large clumped food sources or exclusively uses sitefidelity which generates change points. \par
+In \textit{memory only} simulation environment ants used sitefidelity extensively, which resulted in the drastic change in their foraging rate. As a result, we can see picks and hikes in their foraging rate which was detected by our change point detection algorithm. But when we have tuned the simulations to use both memory and communication, we observe ants did not use memory much, even if they use, it didn’t affect their foraging rate, so it is only detected for pheromone.\par
+
+We have only used binary segmented cumulative sum methods on raw data for detecting the change points. In future, we can try to observe and find the pattern of changes in the foraging rate when the pheromone is laid, and use the statistical data from the simulation to infer the pheromone laying events in the field experiment data.
