--- a/style_sheets/bibfile_name.bib
+++ b/style_sheets/bibfile_name.bib
@@ -1,3 +1,19 @@
+@inproceedings{letendre2013synergy,
+	title={Synergy in ant foraging strategies: memory and communication alone and in combination},
+	author={Letendre, Kenneth and Moses, Melanie E},
+	booktitle={Proceedings of the 15th annual conference on Genetic and evolutionary computation},
+	pages={41--48},
+	year={2013},
+	organization={ACM}
+}
+@inproceedings{flanagan2011ants,
+	title={How ants turn information into food},
+	author={Flanagan, Tatiana Paz and Letendre, Kenneth and Burnside, William and Fricke, G Matthew and Moses, Melanie},
+	booktitle={Artificial Life (ALIFE), 2011 IEEE Symposium on},
+	pages={178--185},
+	year={2011},
+	organization={IEEE}
+}
 @article{narzt2010self,
   title={Self-organising congestion evasion strategies using ant-based pheromones},
   author={Narzt, W and Wilflingseder, U and Pomberger, G and Kolb, D and H{\"o}rtner, H},
