--- a/style_sheets/template.tex
+++ b/style_sheets/template.tex
@@ -57,15 +57,13 @@
 \previousdegrees{B.Sc., Chittagong University of Engineering \& Technology, 2011}
 
 \date{May, \thisyear}
-
 \maketitle
 
 %\makecopyright
 %Copyright page is no longer necessary D. Murrell
 
 \begin{dedication}
-   To my parents and my elder brother for their support,
-   encouragement and the Corvette they're giving me for graduation. \\[3ex]
+   To my parents and my elder brother for their support. \\[3ex]
 \end{dedication}
 
 \begin{acknowledgments}
@@ -78,8 +76,8 @@
 
 \begin{abstract}
  Communication is an important factor in the foraging performance of
- social insects, such as ants. During foraging, ants keep track of the food
- sources by using memory (site fidelity) or by communicating it through pheromones. Previous field experiments showed that the rate of seed collection depends on the distribution of food in the environment. If food is spatially clustered, then ants recruit nest mates to collect seeds from large clusters. However, we do not know when the recruitment occurs. To explore this question, we analyzed foraging rates on different sizes of piles in the simulation.  Using a power law distribution to arrange seeds in piles of different sizes, we observed that for significantly large piles of seeds, the ants take more time to discover a pile, but once discovered, seeds are collected at an increased rate from that pile. We also observed that ants may repeatedly lose track of found piles and then re-find them. Using change point analysis on seed intake time series, we were able to trace the discovery of piles by detecting changes in the foraging rate.  We use simulations to determine how to correlate change points with recruitment events, and then use that relationship to infer the recruitment event in in field data.
+ social insects, such as ants. During foraging, ants keep track of food
+ sources by using memory (site fidelity) or by communicating through pheromones. Previous field experiments showed that the rate of seed collection depends on the distribution of food in the environment. If food is spatially clustered, then it is beneficial for ants recruit nest mates to collect seeds from large clusters. However, we do not know when the recruitment occurs in natural ant population. To explore this question, we used a power law distribution to arrange seeds in piles of different sizes. We observe that simulated ants use pheromone more when the food sources are clumped, and they re-discover the pile more frequently if the food source is large. Simulated ants don't use the pheromone to recruit from the food source that is scattered in the environment. We use simulations to determine how to correlate change points with recruitment events, and then use that relationship to infer recruitment event in in field data. We also observed that ants may repeatedly lose track of found piles and then re-find them. Using change point analysis on seed intake time series, we were able to trace the discovery of piles by detecting changes in the foraging rate.  
 \clearpage %(required for 1-page abstract)
 \end{abstract}
 \tableofcontents
@@ -92,6 +90,14 @@
 	Genetic Algorithm
 	\item[CPFA]
 	Central Place Foraging Algorithm
+	\item[Catagory A]
+	Change point detected with 10 seconds of laying pheromone
+	\item[Catagory B]
+	Change point detected with 11-300 seconds of laying pheromone
+	\item[Catagory C]
+	Change point detected after 300 seconds of laying pheromone
+	\item[Catagory D]
+	Change point detected but no pheromone laid
 \end{glossary}
 \mainmatter
 \include{Introduction}
